Re-organize Component Fields
* Change component input and view to 2 column layout
* Move ALR Area Impacted to the first question and inside each component so it lines up
* Move Ag fields to end of each component
* Update labeling to use long names everywhere

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
@@ -1,12 +1,7 @@
-<div class="{{ fillRow ? 'grid-3' : 'grid-2' }}">
-  <div *ngIf="component.agCapMap">
-    <div class="subheading2">Ag Cap Map</div>
-    {{ component.agCapMap }}
-    <app-no-data *ngIf="component.agCapMap === null || component.agCapMap === undefined"></app-no-data>
-  </div>
-  <div *ngIf="component.agCapConsultant">
-    <div class="subheading2">Ag Cap Consultant</div>
-    {{ component.agCapConsultant }}
-    <app-no-data *ngIf="component.agCapConsultant === null || component.agCapConsultant === undefined"></app-no-data>
-  </div>
+<div>
+  <div class="subheading2">ALR Area Impacted (ha)</div>
+  <app-inline-number
+    [value]="component.alrArea?.toString()"
+    (save)="onSaveAlrArea($event)"
+  ></app-inline-number>
 </div>
