--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
@@ -1,5 +1,5 @@
-<div class="full-width" *ngIf="component.agCapMap || component.agCapConsultant">
-  <app-basic [component]="component" [fillRow]="true"></app-basic>
+<div>
+  <app-basic [component]="component" [fillRow]="true" (saveAlrArea)='onSaveAlrArea($event)'></app-basic>
 </div>
 <div>
   <div class="subheading2">Non-Farm Use Type</div>
