--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/incl-excl-input/incl-excl-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/incl-excl-input/incl-excl-input.component.html
@@ -1,7 +1,20 @@
 <form [formGroup]="form" class="turp-component-form">
   <div class="grid">
+    <mat-form-field appearance="outline">
+      <mat-label>ALR Area Impacted (ha)</mat-label>
+      <input
+        matInput
+        min="0.01"
+        mask="separator.2"
+        thousandSeparator=","
+        separatorLimit="9999999999"
+        formControlName="alrArea"
+        required
+      />
+    </mat-form-field>
+
     <div>
-      <mat-label class='toggle-label'>Applicant Type*</mat-label>
+      <mat-label class="toggle-label">Applicant Type*</mat-label>
       <mat-button-toggle-group required id="isFirstNation" formControlName="applicantType" name="isFirstNation">
         <mat-button-toggle value="Land Owner">Land Owner</mat-button-toggle>
         <mat-button-toggle value="L/FNG Initiated">L/FNG Initiated</mat-button-toggle>
