--- a/alcs-frontend/src/app/features/application/proposal/subd/subd.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/subd/subd.component.html
@@ -4,7 +4,7 @@
     <div class="subheading2">#</div>
     <div class="subheading2">Type</div>
     <div class="subheading2">Size (ha)</div>
-    <div class="subheading2">ALR Area (ha)</div>
+    <div class="subheading2">ALR Area Impacted (ha)</div>
     <ng-container *ngFor="let lot of proposedLots; let i = index">
       <div>
         {{ i + 1 }}
