--- a/alcs-frontend/src/app/shared/lots-table/lots-table-form.component.html
+++ b/alcs-frontend/src/app/shared/lots-table/lots-table-form.component.html
@@ -1,5 +1,5 @@
 <fieldset [formGroup]="form" class="lots-table">
-  <div class="grid">
+  <div class='first-field'>
     <mat-form-field appearance="outline" class="date-picker">
       <mat-label>Total Number of Proposed Lots</mat-label>
       <input
