--- a/alcs-frontend/src/app/features/notice-of-intent/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/proposal/proposal.component.html
@@ -3,11 +3,11 @@
   <h5>Proposal Components - {{ noticeOfIntent?.type?.label }}</h5>
   <div class="input-table">
     <div>
-      <div class="subheading2">Proposal ALR Area (ha)</div>
+      <div class="subheading2">Proposal ALR Area Impacted (ha)</div>
       <app-inline-number [value]="alrArea" (save)="onSaveAlrArea($event)"></app-inline-number>
     </div>
     <div>
-      <div class="subheading2">Ag Cap</div>
+      <div class="subheading2">Agricultural Capability</div>
       <app-inline-dropdown
         [options]="agCapOptions"
         [value]="noticeOfIntent?.agCap"
@@ -15,7 +15,7 @@
       ></app-inline-dropdown>
     </div>
     <div>
-      <div class="subheading2">Ag Cap Source</div>
+      <div class="subheading2">Agricultural Capability Source</div>
       <app-inline-dropdown
         [options]="agCapSourceOptions"
         [value]="noticeOfIntent?.agCapSource"
@@ -23,11 +23,11 @@
       ></app-inline-dropdown>
     </div>
     <div>
-      <div class="subheading2">Ag Cap Map</div>
+      <div class="subheading2">Agricultural Capability Mapsheet Reference</div>
       <app-inline-text [value]="noticeOfIntent?.agCapMap" (save)="updateNoiValue('agCapMap', $event)"></app-inline-text>
     </div>
     <div>
-      <div class="subheading2">Ag Cap Consultant</div>
+      <div class="subheading2">Agricultural Capability Consultant</div>
       <app-inline-text
         [value]="noticeOfIntent?.agCapConsultant"
         (save)="updateNoiValue('agCapConsultant', $event)"
