--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -9,6 +9,7 @@
     <div class="left">
       <h3 class="card-title">
         <span class="margin-right">{{ cardTitle }}</span>
+        <app-application-legacy-id [legacyId]="application.legacyId"></app-application-legacy-id>
         <app-application-type-pill [type]="application.type"></app-application-type-pill>
       </h3>
     </div>
