--- a/alcs-frontend/src/app/features/board/dialogs/card-dialog/card-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/dialogs/card-dialog/card-dialog.component.scss
@@ -104,3 +104,14 @@
 .card-comments-wrapper {
   margin-top: 36px;
 }
+
+.legacy-id {
+  display: inline-flex;
+  align-items: baseline;
+  font-size: 20px;
+  font-weight: 400;
+
+  mat-icon {
+    vertical-align: sub;
+  }
+}
