--- a/alcs-frontend/src/app/shared/details-header/details-header.component.scss
+++ b/alcs-frontend/src/app/shared/details-header/details-header.component.scss
@@ -64,3 +64,14 @@
   flex-direction: row-reverse;
   align-items: flex-end;
 }
+
+.legacy-id {
+  display: inline-flex;
+  align-items: baseline;
+  font-size: 20px;
+  font-weight: 400;
+
+  mat-icon {
+    vertical-align: sub;
+  }
+}
