Code Review Feedback
Use ng-content to DRY up the code a bit

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/incl-excl/incl-excl.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/incl-excl/incl-excl.component.html
@@ -1,7 +1,4 @@
-<div>
-  <app-basic [component]="component" [fillRow]="true" (saveAlrArea)="onSaveAlrArea($event)"></app-basic>
-</div>
-
+<ng-content> </ng-content>
 <div>
   <div class="subheading2">Applicant Type</div>
   {{ component.inclExclApplicantType }}
