--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pfrs/pfrs.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pfrs/pfrs.component.html
@@ -1,10 +1,8 @@
-<div class="full-width grid-2">
-  <app-basic [component]="component" (saveAlrArea)="onSaveAlrArea($event)"></app-basic>
-  <div>
-    <div class="subheading2">Use End Date</div>
-    {{ component.endDate | date }}
-    <app-no-data *ngIf="component.endDate === null || component.endDate === undefined"></app-no-data>
-  </div>
+<ng-content></ng-content>
+<div>
+  <div class="subheading2">Use End Date</div>
+  {{ component.endDate | date }}
+  <app-no-data *ngIf="component.endDate === null || component.endDate === undefined"></app-no-data>
 </div>
 <div class="full-width">
   <div class="subheading2">Type of soil approved to be removed</div>
