--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
@@ -1,4 +1,4 @@
-<app-basic [component]="component" (saveAlrArea)="onSaveAlrArea($event)"></app-basic>
+<ng-content></ng-content>
 <div>
   <div class="subheading2">Expiry Date</div>
   {{ component.expiryDate | date }}
